--- a/huh/src/index.css
+++ b/huh/src/index.css
@@ -1,11 +1,11 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  line-height: 1.0;
   font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #dfd4d4;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,13 +13,49 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+
+
+.navbar {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  max-width: 900px;
+  margin: 0 auto;
+  border-bottom: 1px solid #f2f2f2
+}
+
+.navbar .links {
+  margin-left: auto;
+}
+
+.navbar a {
+  margin-left: 16px;
+  text-decoration: none;
+  padding: 6px;
+}
+
+.navbar h2, .login h1 {
+  color: #1063c2d8;
+}
+
+.createListing input, .login input{
+  color: black;
+  background-color: white;
+  padding: 8px;
+}
+
+div, p, h2 {
+  color: black; 
+}
+
+
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #1063c2d8;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #177beed8;
 }
 
 body {
@@ -37,17 +73,17 @@ h1 {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  border: 2px solid transparent;
+  padding: 0.5em 0.9em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #131212d8;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #177beed8;
 }
 button:focus,
 button:focus-visible {
