--- a/huh/src/index.css
+++ b/huh/src/index.css
@@ -18,6 +18,7 @@
 .navbar {
   padding: 20px;
   display: flex;
+  justify-content: space-between;
   align-items: center;
   max-width: 900px;
   margin: 0 auto;
